<resources>
    <string name="app_name">Muscle</string>

    <!-- Temporary strings -->

    <string name="test_exercise_name">Chest Press</string>
    <string name="test_exercise_kind">Strength</string>
    <string name="test_exercise_desc">1. Sit down on the Chest Press Machine and select the weight\n2. Step on the lever provided by the machine since it will help you bring the handles forward so that you can grab the handles and fully extend forward.\n3. Grab the handles with a palm down grip&#8230;</string>
    <string name="test_email">ola@ua.pt</string>
    <string name="test_pass">123456</string>

    <!-- Log in | Register | Forgot Pass -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_confirmation_hint">Confirm Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="Q_forgot_pass">Forgot your password?</string>
    <string name="Q_register">Don\'t have an account yet?</string>
    <string name="create_account">Create Account</string>
    <string name="register_note">Note: Your password must be at least 6 chars long</string>

    <!-- Exercise -->
    <string name="start">Start</string>
    <string name="height_hint">Height (cm)</string>
    <string name="weight_hint">Weight (Kg)</string>
    <string name="title_activity_home">home</string>

    <!-- Menu -->
    <string name="title_home">Home</string>
    <string name="title_myPlan">My Plan</string>
    <string name="title_exerciseHistory">History</string>
    <string name="title_Feed">Feed</string>
    <string name="title_exerciseList">Exercise List</string>

    <!-- Profile -->
    <string name="dob_txt">Date of Birth</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="profile_changePic">Change Photo</string>
    <string name="profile_date">____/__/__</string>
    <string name="profile_name">Name</string>
    <string name="profile_height">Height (cm)</string>
    <string name="profile_weight">Weight (Kg)</string>
    <string name="profile_skip">Skip</string>
    <string name="profile_save">Save</string>
    <string name="profile_male">Male</string>
    <string name="profile_female">Female</string>

    <!-- My Plan -->
    <string name="plan_reps">Reps</string>
    <string name="plan_sets">Sets</string>
    <string name="plan_rest">Rest</string>

    <!-- Feed -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Detailed Exercise Activity-->
    <string name="share">Share</string>
    <string name="like">Bump</string>

    <!-- Create Plan Activity-->
    <string name="name_hint">Plan\'s name</string>

</resources>
