<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_exerciseList"
        android:icon="@drawable/ic_exercise_list"
        android:title="@string/title_exerciseList"/>

    <item
        android:id="@+id/navigation_myPlan"
        android:icon="@drawable/ic_my_plan"
        android:title="@string/title_myPlan" />

    <item
        android:id="@+id/navigation_exerciseHistory"
        android:icon="@drawable/ic_exercise_history"
        android:title="@string/title_exerciseHistory" />

    <item
        android:id="@+id/navigation_myProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_myProfile" />

</menu>
