<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/userCommentImage">


        <Button
            android:id="@+id/fitbit_button"
            android:gravity="center"
            android:layout_width="60pt"
            android:layout_height="20pt"
            android:onClick="onClickFitbit"
            android:text="Add Fitbit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />

        <Button
            android:id="@+id/soundConf_button"
            android:gravity="center"
            android:layout_width="60pt"
            android:layout_height="20pt"
            android:onClick="onClickSoundConf"
            android:text="Sound"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/fitbit_button" />

        <Button
            android:id="@+id/sensorsCal_button"
            android:gravity="center"
            android:layout_width="60pt"
            android:layout_height="20pt"
            android:onClick="onClickSensorsCal"
            android:text="Calibration"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/soundConf_button" />

        <Button
            android:id="@+id/save_button"
            android:gravity="center"
            android:layout_width="40pt"
            android:layout_height="20pt"
            android:onClick="onClickSave"
            android:text="@string/profile_save"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/weight_input_layout" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="130dp"
            android:layout_height="131dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/pick_profile_img"
            android:contentDescription="@string/profile_pic"
            android:onClick="onClickPickImage"
            android:layout_width="80pt"
            android:layout_height="80pt"
            app:srcCompat="@drawable/ic_profile"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp"/>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/pick_profile_img"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/weight_input_layout"
            android:layout_width="125dp"
            android:layout_height="77dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:errorEnabled="true"
            app:layout_constraintHorizontal_bias="0.79"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/weight_input"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/profile_weight"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/height_input_layout"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/height_input"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/profile_height"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.design.widget.TextInputLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>



