<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="0dp">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    app:layout_constraintLeft_toRightOf="@+id/imageView"
    android:layout_marginLeft="0dp">



    <!--"@string/pick_date"-->

    <TextView
        android:id="@+id/textViewDob"
        android:text="@string/dob_txt"
        android:layout_width="104dp"
        android:layout_height="39dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button_bod_picker"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickPickDate"
        android:text="@string/date_pick"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/weight_input_layout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="39dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_bod_picker"
        app:layout_constraintRight_toLeftOf="@+id/button_bod_picker"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:cropToPadding="true"
        app:layout_constraintRight_toLeftOf="@+id/pick_profile_img_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pick_profile_img_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickPickImage"
        android:text="Pick Profile Picture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/pick_profile_img_btn">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="Name"
            android:maxLength="128"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <!--android:imeOptions="actionDone"-->

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/height_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioSex">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/height_input"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:digits="0123456789"
            android:maxLength="3"
            android:ems="10"
            android:hint="@string/height_hint"
            android:inputType="number"
            android:imeOptions="actionNext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/weight_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/weight_input"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:digits="0123456789."
            android:ems="10"
            android:hint="@string/weight_hint"
            android:maxLength="6"
            android:inputType="number"
            android:imeOptions="actionDone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/skip_button"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickSkip"
        android:text="Skip"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:onClick="onClickSave"
        android:text="Save"
        app:layout_constraintBaseline_toBaselineOf="@+id/skip_button"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="130dp"
        android:layout_height="131dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_weight="0.5"
            android:layout_marginLeft="0dp"
            android:text="Male"
            app:layout_constraintBaseline_toBaselineOf="@+id/radioFemale"
            app:layout_constraintRight_toLeftOf="@+id/radioFemale" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginRight="0dp"
            android:text="Female"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_input_layout" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
</ScrollView>